# INCIT-EV-DSS

./: README.md
backend/data-model/: .gitignore  README.md  pyproject.toml
backend/data-model/dssdm/mongo/: mongodb_utils.py
backend/data-model/dssdm/mongo/input/: analysis.py  ciObject.py  ciYaml.py  dcm.py  defaults.py  powerYaml.py  project.py  token.py  ubmObject.py  ubmYaml.py  user.py
backend/data-model/dssdm/mongo/input/modules_defaults/: ci_def.py  dcm_def.py  power_def.py  ubm_def.py
backend/data-model/dssdm/mongo/output/: dcm.py  logs.py  result.py
backend/dss/: .env  .gitignore  .gitmodules  Dockerfile  LICENSE  Pipfile  README.md  main.py
backend/dss/app/api/v1/: analyses.py  auth.py  dcm.py  defaults.py  logs.py  projects.py  results.py  users.py
backend/dss/app/core/: config.py  db.py
backend/dss/app/models/: analyses.py  ciYaml.py  powerYaml.py  project.py  results.py  token.py  ubmYaml.py  user.py
backend/dss/app/models/common/: mongodb_utils.py
backend/dss/app/models/modules_obj/: ciObject.py  ubmObject.py
backend/dss/app/services/: analyses.py  dcm.py  defaults.py  logs.py  projects.py  results.py  users.py
backend/dss/docker/: db.env  docker-compose.yaml  dss-api.key  dss-api.key.pub  dss-deployment.yaml
backend/dss/docker/mongo-seed/seed-defaults/: Dockerfile  defaults.json
backend/dss/docker/mongo-seed/seed-users/: Dockerfile  users.json
backend/integration/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  api.txt  docker-compose.yml  dss-integration.yaml  main.py  pyproject.toml  requirements.txt
backend/integration/app/api/v1/: health.py  simulations.py
backend/integration/app/core/: auth.py  logs.py  settings.py  status.py
backend/integration/app/services/: dss.py  simulations.py
backend/integration/ci/: LICENSE  README.md  pyproject.toml
backend/integration/ci-and-p-gui/: README.md  pyproject.toml
backend/integration/ci-and-p-gui/gui/: Graphs.py  INCIT_EV_GUI.py  INCIT_EV_GUI_integration_v1.py  Input_window_layout.py  Output_window_layout.py
backend/integration/ci/ci/: CI_database.xlsx  CI_module.py  CI_module_integration_v1.py  Electricity cost profile.xlsx  Output database for customer.xlsx
backend/integration/config/: test_wp2.yaml
backend/integration/datasets/: CI_database.xlsx  P_module_generated_profiles.xlsx  P_profile_UL.xlsx  Solar_PP_generation_profile.xlsx  impact_kw_mean_7_days.csv  parking_long_mean_7_days.xlsx  parking_medium_mean_7_days.xlsx  parking_short_mean_7_days.xlsx
backend/integration/input/: ci.yaml  file_JSON_Nico  outputs.yaml  p.yaml  test-analysis.json  ubm.yaml  validation-schemas.json
backend/integration/outputs/: Output database for customer.xlsx
backend/integration/power/: Initial_inputs_LINKS.rar  README.md  pyproject.toml
backend/integration/power/power/: LICENSE  P_module.py  P_module_integration_v1.py  Power_module_KPI.py
backend/integration/ubm/: .gitignore  Dockerfile  LICENSE  README.md  istat_validation.py  main.py  merging_shp.py  poc.py  pyproject.toml  requirements.txt  validation.py
backend/integration/ubm/config/: corine_day.yaml  corine_night.yaml  s0_conf.yaml  s1_conf.yaml  s2_conf.yaml
backend/integration/ubm/input/: small_turin.yaml  weekday_turin.yaml  weekday_turin_1.yaml  weekday_turin_5.yaml
backend/integration/ubm/ubm/: car_parking.py  charging.py  enact_pop.py  mobility.py  plotting.py  surveys.py  zoning.py
backend/integration/ubm/ubm/models/: bev.py
backend/integration/ubm/ubm/utils/: online_stats.py  stuff.py
