[tool.poetry]
name = "gui"
version = "0.2.2"
description = ""
authors = ["Klemen Knez <kk3026@student.uni-lj.si>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.70.1"
pandas = "^1.2.5"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
#power = { git = "https://ul:oFxGq9UPKgq9tm97WFA8@zenit.linksfoundation.com/incit-ev/power.git", branch="master"}
#ci = { git = "https://ul:3s_eYQjWj9xfoyTScHhK@zenit.linksfoundation.com/incit-ev/ci.git", branch="master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
