[tool.poetry]
name = "ci"
version = "0.1.6"
description = ""
authors = ["Klemen Knez <kk3026@student.uni-lj.si>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.5"
PySimpleGUI = "^4.70.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
